force-app/main/default/objects/SDOC__SDRelationship__c.object
<CustomObject>
    <description>S-Doc: Junction object that allows S-Docs to be related to multiple Salesforce objects</description>
    <fields>
        <fullName>Admissions_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admissions Questionnaire</label>
        <referenceTo>Admissions_Questionnaire__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appraisal_Objectives__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appraisal &amp; Objectives</label>
        <referenceTo>Appraisal_Objectives__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Custody_School__c</fullName>
        <formula>Asset_Custody__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Custody School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Custody_Staff__c</fullName>
        <formula>Asset_Custody__r.Staff_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Custody Staff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Custody_Student_Name__c</fullName>
        <formula>Asset_Custody__r.Student__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Custody Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Custody_Student__c</fullName>
        <formula>Asset_Custody__r.Student__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Custody Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Custody__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Custody</label>
        <referenceTo>Asset_Custody__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Warning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Warning</label>
        <referenceTo>Employee_Warnings__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employment_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employment Agreement</label>
        <referenceTo>Employment_Agreement__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Application</label>
        <referenceTo>Grant_Application__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Statement</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>S-Docs Relationships (Invoice Statement)</relationshipLabel>
        <relationshipName>S_Docs_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice_Statement__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Micro_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Micro Site</label>
        <referenceTo>Micro_Site__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Slip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Slip</label>
        <referenceTo>Pay_Slip__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsibility_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsibility Point</label>
        <referenceTo>Responsibility_Points__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Created__c</fullName>
        <formula>SDOC__SDoc__r.CreatedBy.FirstName +&apos; &apos; + SDOC__SDoc__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Comment__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Comment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Created_On__c</fullName>
        <formula>SDOC__SDoc__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Name__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Number__c</fullName>
        <formula>HYPERLINK(
&quot;/&quot;+ Id
,SDOC__SDoc__r.SDOC__Document_Number__c
,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Status__c</fullName>
        <formula>TEXT(SDOC__SDoc__r.SDOC__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Type__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Document_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Edit_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Edit_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Email_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_GD_Link__c</fullName>
        <label>Doc Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_GD_Status__c</fullName>
        <label>Doc Link Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Linked</fullName>
                </value>
                <value>
                    <fullName>Linked to Google Doc</fullName>
                </value>
                <value>
                    <fullName>Linked to Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__SDoc_Rel_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Mailed</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Pending Client Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected by Client</fullName>
                </value>
                <value>
                    <fullName>Signed Pending Processing</fullName>
                </value>
                <value>
                    <fullName>Signed Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__SDoc__c</fullName>
        <label>SDoc</label>
        <referenceTo>SDOC__SDoc__c</referenceTo>
        <relationshipLabel>SDoc</relationshipLabel>
        <relationshipName>SDoc</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SDOC__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDoc_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Upload__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__Upload__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__View_Link__c</fullName>
        <formula>SDOC__SDoc__r.SDOC__View_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Asset</label>
        <referenceTo>School_Assets__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Xero_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Payment</label>
        <referenceTo>Xero_Payment__c</referenceTo>
        <relationshipLabel>S-Docs Relationships</relationshipLabel>
        <relationshipName>S_Docs_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SDoc Relationship</label>
    <nameField>
        <displayFormat>SDR-{000}</displayFormat>
        <label>Sdoc Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Docs Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SDOC__GD_Link</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(SDOC__SDoc_Rel_GD_Status__c, &apos;Linked to Google Doc&apos;)
, 
ISBLANK( SDOC__SDoc_Rel_GD_Link__c ) 
)</errorConditionFormula>
        <errorMessage>Before you are able to manually set the Docs Status to &quot;Linked to Google Doc&quot;, you must first enter a valid URL to an existing Google Doc in the Google Docs Link field.</errorMessage>
    </validationRules>
</CustomObject>